Change log for Perl module Class::Virtual

0.05
    - Added a license.  [rt.cpan.org 8229]

0.04  Sun Oct 19 22:18:59 PDT 2003
    * Class::Virtually::Abstract was missing a $VERSION
    - Using @ISA instead of base.pm to avoid the odd base.pm bug.

0.03  Fri Mar  2 01:33:07 EST 2001
    * Officially distributing Class::Virtually::Abstract
    * Virtual responsibility was leaking across all virtual classes
    - Started using Carp::Assert

0.02  Fri Feb  9 13:17:34 GMT 2001
    - Fixed wierd bug with fully qualified Carp::carp calls.

0.01  Tue Nov 28 03:03:35 GMT 2000
    - First working version released to CPAN.

