@@ -1,7 +1,8 @@
 Changes
-MANIFEST
-Makefile.PL
 lib/Class/Virtual.pm
 lib/Class/Virtually/Abstract.pm
+Makefile.PL
+MANIFEST
 t/Abstract.t
+t/assert.t
 t/Virtual.t
